--- a/ers/requirements.txt
+++ b/ers/requirements.txt
@@ -4,16 +4,25 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==42.0.7
 defusedxml==0.8.0rc2
+diff-match-patch==20230430
 Django==4.2
+django-import-export==4.1.0
 idna==3.7
+numpy==2.0.0
 oauthlib==3.2.2
+pandas==2.2.2
 pycparser==2.22
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python3-openid==3.2.0
+pytz==2024.1
 requests==2.32.2
 requests-oauthlib==2.0.0
+six==1.16.0
 social-auth-app-django==5.2.0
 social-auth-core==4.5.4
 sqlparse==0.5.0
+tablib==3.5.0
+tzdata==2024.1
 urllib3==2.2.1
